--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -5,13 +5,16 @@
 
 {% block extra_css %}
 
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static 'css/welcome_page.css' %}">
 {% endblock extra_css %}
 
 {% block content %}
 
-<h1>Hola mundo</h1>
-<h2>{{page.banner_title}}</h2>
+<h1 class="text-center">{{page.banner_title}}</h1>
+
+<img src="{{page.banner_image}}" alt="">
+
+<h2 class="text-center">Head to my blog, <a href="generic-page">Click Here</a></h2>
 
 {% endblock content %}
