--- a/wagtail101/templates/base.html
+++ b/wagtail101/templates/base.html
@@ -24,6 +24,7 @@
         {% endif %}
 
         {# Global stylesheets #}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static 'css/wagtail101.css' %}">
 
         {% block extra_css %}
@@ -31,16 +32,23 @@
         {% endblock %}
     </head>
 
-    <body class="{% block body_class %}{% endblock %}">
+    <body class="{% block body_class %}{% endblock %} bg-primary-subtle">
         {% wagtailuserbar %}
 
-        {% block content %}{% endblock %}
+        <main>
+            {% block content %}{% endblock %}
+        </main>
+        <footer class="py-4 text-center bg-primary sticky-bottom">
+            {% if settings.site_settings.SocialMediaSettings.instagram %}
+                <a class="link-warning" href="{{settings.site_settings.SocialMediaSettings.instagram}}">Follow me on Instagram</a>
+            {% endif %}
+        </footer>
 
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/wagtail101.js' %}"></script>
 
         {% block extra_js %}
-        {# Override this in templates to add extra javascript #}
+
         {% endblock %}
     </body>
 </html>
